# llm-language-eval

./: .gitignore  README.md  benchmark.py  embedding_scorer.py  evaluation_metrics.py  llmclient.py  main.py  pyproject.toml  test_data.py
